src/cses/creating_strings/clang-tidy.txt
1 warning and 1 error generated.
Error while processing /Users/michael/repos/competitive-programming/src/cses/creating_strings/creating_strings.cpp.
/Users/michael/repos/competitive-programming/src/cses/creating_strings/creating_strings.cpp:3:10: error: 'algorithm' file not found [clang-diagnostic-error]
    3 | #include <algorithm>
      |          ^~~~~~~~~~~
/Users/michael/repos/competitive-programming/src/cses/creating_strings/creating_strings.cpp:12:5: warning: this loop is infinite; none of its condition variables (current) are updated in the loop body [bugprone-infinite-loop]
   12 |     for (std::uint64_t current{2}; current <= value; ++current) {
      |     ^
Found compiler error(s).
